crates/karva_language_server/tests/e2e/snapshots/e2e__diagnostics__does_not_analyze_an_open_conftest_as_its_own_parent.snap
---
source: crates/karva_language_server/tests/e2e/diagnostics.rs
expression: workspace.normalize(diagnostics)
---
{
  "diagnostics": [],
  "uri": "file:///project/conftest.py",
  "version": 1
}
